# edgepi-rpc-client-py

./: .bumpversion.cfg  .pylintrc  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  start_server.sh
.github/workflows/: build-publish-pypi-test.yml  build-publish-pypi.yml  create-release-tag.yml  pypi-publish.yml  python-integration-test.yml  python-lint.yml  python-unit-test.yml
client_rpc_channel/: client_rpc_channel.py
client_services/: client_tc_service.py
client_services/adc/: adc_pb_enums.py  client_adc_service.py
client_services/dac/: client_dac_service.py  client_din_service.py
client_services/din/: client_din_service.py  din_pb_enums.py
client_services/dout/: client_dout_service.py  dout_pb_enums.py
client_services/led/: client_led_service.py  led_pb_enums.py
client_services/relay/: client_relay_service.py
client_services/tc/: client_tc_service.py  tc_pb_enums.py
edgepi_rpc_client/: client_rpc_channel.py
edgepi_rpc_client/services/adc/: adc_pb_enums.py  client_adc_service.py
edgepi_rpc_client/services/dac/: client_dac_service.py  dac_pb_enums.py
edgepi_rpc_client/services/din/: client_din_service.py  din_pb_enums.py
edgepi_rpc_client/services/dout/: client_dout_service.py  dout_pb_enums.py
error/: rpc_failure.py
tests/integration/: README.md  conftest.py  test_adc_service.py  test_dac_service.py  test_din_service.py  test_dout_service.py  test_error_handling.py  test_led_service.py  test_module.py  test_pwm_service.py  test_relay_service.py  test_tc_service.py
util/: helpers.py
(+7 files in other folders)
