[metadata]
name = edgepi-rpc-client
version = 0.0.8
author = Josiah Kievit, Isaac James
author_email = jkievit@osensa.com, ijames@osensa.com
description = Client for EdgePi RPC Server
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir=
    =edgepi_rpc_client
packages=find:

[options.packages.find]
where=edgepi_rpc_client/services
install_requires = 
	protobuf>=3.20.3
	edgepi-rpc-protobuf>=1.0.15
	pyzmq>=25.1.0
	edgepi-python-sdk>=1.2.13
